; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pthread_mutex.c_pte_timed_eventwait.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pthread_mutex.c_pte_timed_eventwait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32 }

@PTE_OS_TIMEOUT = common dso_local global i64 0, align 8
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.timespec*)* @pte_timed_eventwait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pte_timed_eventwait(i32 %0, %struct.timespec* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.timespec*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.timespec* %1, %struct.timespec** %4, align 8
  %8 = load %struct.timespec*, %struct.timespec** %4, align 8
  %9 = icmp eq %struct.timespec* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @pte_osSemaphorePend(i32 %11, i32* null)
  store i64 %12, i64* %6, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load %struct.timespec*, %struct.timespec** %4, align 8
  %15 = call i32 @pte_relmillisecs(%struct.timespec* %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i64 @pte_osSemaphorePend(i32 %16, i32* %5)
  store i64 %17, i64* %6, align 8
  br label %18

18:                                               ; preds = %13, %10
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* @PTE_OS_TIMEOUT, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @ETIMEDOUT, align 4
  store i32 %23, i32* %7, align 4
  br label %25

24:                                               ; preds = %18
  store i32 0, i32* %7, align 4
  br label %25

25:                                               ; preds = %24, %22
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i64 @pte_osSemaphorePend(i32, i32*) #1

declare dso_local i32 @pte_relmillisecs(%struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
